# mqtt-thermometer

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.production.yml  docker-compose.yml  mqtt-thermometer.service  mqtt-thermometer.toml  mqtt_subscriber.py  purge_mqtt_retains.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-locally.sh  setup-service.sh  start-mqtt-poller.sh  start-service.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  docker-cicd.yml  main.yml
backup/: deploy.yml  main.yml
config/: mqtt-thermometer-cottage.toml  mqtt-thermometer-home.toml
mqtt_thermometer/: cache.py  database.py  mqtt.py  service.py  settings.py
mqtt_thermometer/static/: site.webmanifest  styles.css  sw.js
mqtt_thermometer/templates/: base.jinja2  customers.jinja2  index.jinja2  legends.jinja2
scripts/: create-favicons-cottage.sh  create-favicons.sh  deploy.sh  setup-raspi.sh
templates/: index.jinja2
test/: cache_integration_test.py  cache_test.py  config_test.py  mqtt-thermometer.toml  service_test.py  settings_test.py
