[project]
name = "mqtt-thermometer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-htmx>=0.5.0",
    "paho-mqtt>=2.1.0",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"mqtt_thermometer" = [
    "templates/**/*",
    "static/**/*",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
